--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Binary Upload Boom</title>
+    <title>OnlyPlants</title>
+    <script src="https://kit.fontawesome.com/13108de3bb.js" crossorigin="anonymous"></script>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/imgs/favicon-32x32.png"
+      href="../public/imgs/favicon-32x32.png"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -23,13 +24,17 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../public/css/style.css" />
   </head>
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Binary Upload Boom</a></h1>
-        <span>The #100Devs Social Network</span>
+        <h1 class=""><a href="/profile">OnlyPlants</a></h1>
+        <span>A Social Network for Trading Plants</span>
+        <br>
+        <i class="fa-regular fa-leaf fa-xl"></i>
+        <i class="fa-regular fa-arrow-right-arrow-left fa-xl"></i>
+        <i class="fa-solid fa-seedling fa-xl"></i>
       </div>
     </header>
   </body>
