update styling headers

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="container">
@@ -32,9 +32,12 @@
         <h1 class=""><a href="/profile">OnlyPlants</a></h1>
         <span>A Social Network for Trading Plants</span>
         <br>
-        <i class="fa-regular fa-leaf fa-xl"></i>
-        <i class="fa-regular fa-arrow-right-arrow-left fa-xl"></i>
-        <i class="fa-solid fa-seedling fa-xl"></i>
+        <div class="mt-2">
+          <i class="fa-regular fa-leaf fa-xl"></i>
+          <i class="fa-regular fa-arrow-right-arrow-left fa-xl"></i>
+          <i class="fa-solid fa-seedling fa-xl"></i>
+        </div>
+          
       </div>
     </header>
   </body>
