--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -5,7 +5,9 @@
         <% for(var i=0; i<posts.length; i++) {%>
           <li class="col-6 justify-content-between mt-5">
             <a href="/post/<%= posts[i]._id%>">
+              <h5><%= posts[i].title %></h5>
               <img class="img-fluid" src="<%= posts[i].image%>">
+              <h5>Want: <%= posts[i].caption %></h5>
             </a>
           </li>
         <% } %>
