--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,7 @@
               <p><strong>Email</strong>: <%= user.email %></p>
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
-          <div class="mt-5">
+          <div class="mt-3">
             <h2>Add a post</h2>
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
@@ -28,9 +28,12 @@
       </div>
       <div class="col-6">
         <ul class="row list-unstyled">
+        <h5><%= user.userName %>'s Offering:</h5>
         <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
+          <li class="col-6 justify-content-between mt-3">
+            
             <a href="/post/<%= posts[i]._id%>">
+              <h5><%= posts[i].title %></h5>
               <img class="img-fluid" src="<%= posts[i].image%>">
             </a>
           </li>
